# cpp_project_template

./: .gitmodules  CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui-docking/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/stb_image/: CMakeLists.txt
src/: main.cpp
